// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Entry Schema Entry can automatically sign the photos url 1`] = `
Object {
  "data": Object {
    "listOngoingEntry": Array [
      Object {
        "id": "9fd5fd11-603e-47e8-b104-de39071c7b80",
        "photo": Array [
          Object {
            "signedUrl": Object {
              "get": "signed-request-for-get",
            },
          },
        ],
        "see": "Derrick Smitham",
      },
    ],
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`Entry Schema createEntry: should work 1`] = `
Object {
  "data": Object {
    "createEntry": Object {
      "Guest": Object {
        "email": "jane@example.com",
        "firstName": "Jane",
        "lastName": "Doe",
      },
      "id": "asdf",
      "see": "xyz",
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`Entry Schema endEntry: should work 1`] = `
Object {
  "data": Object {
    "endEntry": Object {
      "createdAt": "2019-03-15T00:57:13",
      "endedAt": "2020-02-01T00:00:00",
      "id": "9fd5fd11-603e-47e8-b104-de39071c7b80",
      "see": "Derrick Smitham",
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`Entry Schema getByGuestId: should work 1`] = `
Object {
  "data": Object {
    "byGuestId": Array [],
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`Entry Schema getEntry: should work 1`] = `
Object {
  "data": Object {
    "getEntry": Object {
      "createdAt": "2019-03-15T00:57:13",
      "endedAt": "2020-01-22T13:33:14",
      "id": "9fd5fd11-603e-47e8-b104-de39071c7b80",
      "see": "Derrick Smitham",
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`Entry Schema listEntry: should work 1`] = `
Object {
  "data": Object {
    "listEntry": Array [
      Object {
        "Guest": Object {
          "NIK": "2426577447946541",
          "firstName": "Maurine",
          "lastName": "Rath",
        },
        "createdAt": "2019-03-15 00:03",
        "endedAt": "2020-01-22T13:33:14",
        "photo": Array [
          Object {
            "id": "19e073cc-7e37-465e-8f19-1afdce2634ab",
          },
          Object {
            "id": "af9b8dc7-1103-4fc7-8595-5c862cb73d41",
          },
        ],
        "see": "Derrick Smitham",
      },
      Object {
        "Guest": Object {
          "NIK": "2426577447946541",
          "firstName": "Maurine",
          "lastName": "Rath",
        },
        "createdAt": "2019-03-18 23:03",
        "endedAt": "2020-07-18T18:30:40",
        "photo": Array [
          Object {
            "id": "19e073cc-7e37-465e-8f19-1afdce2634ab",
          },
          Object {
            "id": "af9b8dc7-1103-4fc7-8595-5c862cb73d41",
          },
        ],
        "see": "Jerome Schroeder",
      },
      Object {
        "Guest": Object {
          "NIK": "2426577447946541",
          "firstName": "Maurine",
          "lastName": "Rath",
        },
        "createdAt": "2018-12-05 03:12",
        "endedAt": "2019-11-18T23:31:35",
        "photo": Array [
          Object {
            "id": "19e073cc-7e37-465e-8f19-1afdce2634ab",
          },
          Object {
            "id": "af9b8dc7-1103-4fc7-8595-5c862cb73d41",
          },
        ],
        "see": "Leda Hammes",
      },
    ],
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`Entry Schema listEntryToday: can be filtered by guestID 1`] = `
Object {
  "data": Object {
    "listTodayEntry": Array [
      Object {
        "createdAt": "2019-03-15T00:57:13",
        "endedAt": "2020-01-22T13:33:14",
        "see": "Derrick Smitham",
      },
    ],
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`Entry Schema listEntryToday: should work 1`] = `
Object {
  "data": Object {
    "listTodayEntry": Array [],
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`Entry Schema listOngoingEntry: should work 1`] = `
Object {
  "data": Object {
    "listOngoingEntry": Array [],
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;
